SOSDate.TIMEZONE_UTC="Etc/UTC" introduced. Some sources with "Etc/UTC" adjusted